--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".home.MainActivity" />
         <activity android:name=".register.RegisterActivity" />
         <activity android:name=".register.SetingPwdActivity"></activity>
+        <activity android:name=".activity.ArticleActivity"></activity>
+
     </application>
 
 </manifest>
