1、修改包结构(按照模块分包)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".home.MainActivity" />
         <activity android:name=".register.RegisterActivity" />
         <activity android:name=".register.SetingPwdActivity"></activity>
-        <activity android:name=".activity.ArticleActivity"></activity>
+        <activity android:name=".article.activity.ArticleActivity"></activity>
 
     </application>
 
