--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.alibaba:fastjson:1.2.14'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
 }
