--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.lala">
+
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -15,9 +16,9 @@
     <application
         android:name=".LaLaAppaction"
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@mipmap/lelelala"
         android:label="@string/app_name"
-        android:debuggable="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".login.LoginActivity">
@@ -29,9 +30,9 @@
         </activity>
         <activity android:name=".home.MainActivity" />
         <activity android:name=".register.RegisterActivity" />
-        <activity android:name=".register.SetingPwdActivity"></activity>
-        <activity android:name=".article.activity.ArticleActivity"></activity>
-
+        <activity android:name=".register.SetingPwdActivity" />
+        <activity android:name=".article.activity.ArticleActivity" />
+        <activity android:name=".article.activity.ChannelActivity"></activity>
     </application>
 
 </manifest>
