1.完成资讯模块 2.增加我的模块

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.android.lala"
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'com.alibaba:fastjson:1.2.14'
     compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'me.yifeiyuan.periscopelayout:library:1.0.0'
 }
