--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,11 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.14'
     compile 'com.bigkoo:convenientbanner:2.0.5'
     compile 'me.yifeiyuan.periscopelayout:library:1.0.0'
+    compile 'homhomlin.lib:sldinglayout:0.9.0'
+    compile 'homhomlin.lib:ptrrv-library:1.3.1'
+    compile 'com.nineoldandroids:library:2.4.0'
     compile files('libs/aliyun-oss-sdk-android-2.0.3.jar')
     compile files('libs/okhttp-2.7.0.jar')
     compile files('libs/okio-1.6.0.jar')
+    compile 'com.android.support:cardview-v7:23.3.0'
 }
