--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     compile files('libs/ShareSDK-Wechat-2.7.8.jar')
     compile files('libs/ShareSDK-Wechat-Core-2.7.8.jar')
     compile files('libs/ShareSDK-Wechat-Moments-2.7.8.jar')
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
