--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile files('libs/ShareSDK-Wechat-Core-2.7.8.jar')
     compile files('libs/ShareSDK-Wechat-Moments-2.7.8.jar')
     compile 'com.umeng.analytics:analytics:latest.integration'
+    compile 'cn.appsdream.nestrefresh:refreshLayout:0.2'
 }
