--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,58 +11,60 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
 
     <application
         android:name=".LaLaAppaction"
         android:allowBackup="true"
-        android:debuggable="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.LoginActivity"/>
-        <activity android:name=".home.MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".home.MainActivity">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".register.RegisterActivity" />
         <activity android:name=".register.SetingPwdActivity" />
         <activity android:name=".article.activity.ArticleActivity" />
         <activity android:name=".article.activity.ChannelActivity" />
-        <activity android:name=".article.activity.ArticleCommentActivity"/>
-        <activity android:name=".article.activity.SearchArticleActivity"/>
-        <activity android:name=".forgetpassword.ForgetPassword"/>
-        <activity android:name=".forgetpassword.ForgetSetPwd"/>
-        <activity android:name=".mine.activity.MoreActivity"/>
-        <activity android:name=".mine.activity.PersonInfoActivity"/>
-        <activity android:name=".mine.activity.UpdateHeadActivity"/>
-        <activity android:name=".mine.activity.UpdateNameActivity"/>
-        <activity android:name=".market.activity.BuyActivity"/>
-        <activity android:name=".circle.activity.ActionActivity"/>
-        <activity android:name=".circle.activity.CircleActivity"/>
-        <activity android:name=".circle.activity.CircleArticleActivity"/>
-        <activity android:name=".circle.activity.UserHomeActivity"/>
-        <activity android:name=".mine.activity.UpdatePwdActivity"/>
-        <activity android:name=".circle.activity.ShareManActivity"/>
-        <activity android:name=".market.activity.MoreCommodityActivity"/>
-        <activity android:name=".mine.activity.MyChannelActivity"/>
-        <activity android:name=".mine.activity.FeedbackActivity"/>
+        <activity android:name=".article.activity.ArticleCommentActivity"
+                  android:windowSoftInputMode="stateUnchanged|adjustPan"/>
+        <activity android:name=".article.activity.SearchArticleActivity" />
+        <activity android:name=".forgetpassword.ForgetPassword" />
+        <activity android:name=".forgetpassword.ForgetSetPwd" />
+        <activity android:name=".mine.activity.MoreActivity" />
+        <activity android:name=".mine.activity.PersonInfoActivity" />
+        <activity android:name=".mine.activity.UpdateHeadActivity" />
+        <activity android:name=".mine.activity.UpdateNameActivity" />
+        <activity android:name=".market.activity.BuyActivity" />
+        <activity android:name=".circle.activity.ActionActivity" />
+        <activity android:name=".circle.activity.CircleActivity" />
+        <activity android:name=".circle.activity.CircleArticleActivity" />
+        <activity android:name=".circle.activity.UserHomeActivity" />
+        <activity android:name=".mine.activity.UpdatePwdActivity" />
+        <activity android:name=".circle.activity.ShareManActivity" />
+        <activity android:name=".market.activity.MoreCommodityActivity" />
+        <activity android:name=".mine.activity.MyChannelActivity" />
+        <activity android:name=".mine.activity.FeedbackActivity" />
+        <activity android:name=".market.activity.WebBuyActivity"/>
+        <activity android:name=".mine.activity.CollectActivity"/>
+        <activity android:name=".article.activity.ZhongChouActivity"/>
         <activity
             android:name="com.mob.tools.MobUIShell"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize" >
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:windowSoftInputMode="stateHidden|adjustResize">
+
             <!-- QQ和QQ空间分享 QQ登录的回调必须要配置的 -->
             <intent-filter>
                 <data android:scheme="tencent100371282" />
+
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -70,16 +72,28 @@
             <!-- 新浪微博客户端分享回调必须配置 -->
             <intent-filter>
                 <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <!--微信分享回调 -->
+        <!-- 微信分享回调 -->
         <activity
             android:name=".wxapi.WXEntryActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".home.SplashActivity"
+            android:theme="@style/splash_style">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <!-- 友盟统计 -->
+        <meta-data android:value="581ae76df29d980fe80026a6" android:name="UMENG_APPKEY"/>
+        <meta-data android:value="ALL" android:name="UMENG_CHANNEL"/>
     </application>
 
 </manifest>
