--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
         android:name=".LaLaAppaction"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:debuggable="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -54,6 +53,7 @@
         <activity android:name=".mine.activity.CollectActivity"/>
         <activity android:name=".article.activity.ZhongChouActivity"/>
         <activity android:name=".market.activity.ClassificationActivity"/>
+        <activity android:name=".circle.activity.CommentActivty"/>
         <activity
             android:name="com.mob.tools.MobUIShell"
             android:configChanges="keyboardHidden|orientation|screenSize"
